# RAG-Research-Knowledge-Base

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini
docs/: confluence-script-order.md  confluence-workflow.md  production-deployment.md  testing.md  ui-usage.md  ui-vision.md
prompts/: confluence_rag.md
scripts/: ask_confluence.py  build_confluence_graph.py  build_confluence_vector_store.py  preprocess_confluence_exports.py  query_confluence_vector_store.py
src/cortex_rag/: __main__.py  cli.py  config.py
src/cortex_rag/api/: app.py  schemas.py  serializers.py
src/cortex_rag/generation/: __init__.py  confluence_answering.py  ollama_client.py  prompting.py
src/cortex_rag/graph/: __init__.py  confluence_graph.py
src/cortex_rag/ingestion/: __init__.py  confluence_html.py
src/cortex_rag/retrieval/: __init__.py  confluence_embeddings.py  embedding_utils.py  vector_store.py
tests/: conftest.py  test_api_app.py  test_api_serializers.py  test_ask_confluence.py  test_build_confluence_graph.py  test_cli.py  test_confluence_answering.py  test_confluence_graph.py  test_confluence_html.py  test_confluence_vector_store.py  test_embedding_utils.py  test_generation.py
