[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cortex-rag"
version = "0.1.0"
description = "Local Confluence-to-RAG pipeline with a thin UI backend."
requires-python = ">=3.11"

[project.scripts]
cortex-rag = "cortex_rag.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
